apps/umami/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    name: umami
    app: umami
