apps/umami/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-ingress
  namespace: umami
  labels:
    app: umami
spec:
  ingressClassName: nginx
  rules:
  - host: analytics.nolancrook.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: umami-service
            port:
              number: 3000
